@@ -1,5 +1,6 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2816979 by drunken monkey: Added click-sorting for indexed fields in Views.
 - #2779159 by mark_fullmer, drunken monkey, borisson_: Added a Stemmer
   processor.
 - #2799497 by drunken monkey: Added a getter for the Views query's "where"
